# pico-can2040-minimal

./: CMakeLists.txt
src/: main.c
